# graspit_threshold_controller

./: CMakeLists.txt  package.xml
libemg/: Calibration.java  EMGSensor.java  ExperimentSession.java  Participant.java
libemg/io/: CSVLogger.java  ConfigFileReader.java  ConfigFileWriter.java  PCMWriter.java
libemg/proc/: BandFilter.java  PositionFilter.java  Util.java
libemg/ui/: CalibrateActivity.java  CalibrateView.java  CartesianCoordinateSystem.java  CoordinateSystem.java  CursorAnimation.java  CursorEnvironment.java  EffortsDialog.java  Intersection.java  ManualCalibrationDialog.java  PolarCoordinateSystem.java  SpeedGainDialog.java
scripts/: run.sh  run.sh~
src/StatePublisher/: DeviceReaderUI.java  PlotPanel.java  RosPublisher.java  ThresholdController.java
src/rascal/libemg/: EMGSensor.java  Position.java
src/rascal/libemg/proc/: MovingAverageFilter.java
src/rascal/libemg/ui/: EnvironmentItem.java  OscilloscopeView.java  PowerView.java  Rest.java  SignInActivity.java  SignalDialog.java  Target.java
